samples/_failures_safe/1761420164_b24b27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25b9e30a.c:168:1: error: expected declaration specifiers or ‘...’ at end of input
  168 | void print_token_type(
      | ^~~~
